fix ruby on rails span alignment after transition

--- a/src/components/GreetingCard.module.css
+++ b/src/components/GreetingCard.module.css
@@ -31,7 +31,6 @@
   width: 100%;
   margin: 1rem;
 }
-
 .iconDesc {
   position: absolute;
   opacity: 0;
@@ -39,10 +38,15 @@
   transition: transform 0.6s ease-in, opacity 0.5s ease-in;
   font-size: 1rem;
   cursor: default;
+  width: fit-content;
 }
 .activeIconDesc {
   opacity: 1;
-  transform: translateX(-3rem) translateY(2rem);
+  transform: translateX(-2rem) translateY(2rem);
+}
+.activeRailsIconDesc {
+  opacity: 1;
+  transform: translateX(-4rem) translateY(2rem);
 }
 .railsIcon {
   transform: scale(2);
